# talent-scout-ai

./: README.md
.devcontainer/: devcontainer.json
talent_scout_ai/: .gitignore  README.md  app.py  candidates.csv  candidates2.csv  pyproject.toml
talent_scout_ai/src/talent_scout_ai/: crew.py  main.py
talent_scout_ai/src/talent_scout_ai/config/: agents.yaml  tasks.yaml
